--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+
 *{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
 }
+.c-body {
+    color:  blue;
+    background: yellow
+  }
 .game{
     width: 1000px;
     height: 400px;
