--- a/style.css
+++ b/style.css
@@ -4,16 +4,48 @@
     margin: 0;
     overflow-x: hidden;
 }
-.c-body {
-    color:  blue;
-    background: yellow
-  }
+p {
+    margin: 600px 0;
+    padding: 1px;
+    border: 1px solid #999;
+}
+.g-body{
+    background-color: gold;
+}
+.title{
+    margin: 30px auto;
+    text-align: center;
+    text-shadow: blue 0 0 20px;
+    color: white
+}
+.button,
+.popup {
+  list-style: none;
+  width: 250px;
+  height: 48px;
+  line-height: 48px;
+  text-align: center;
+  position: absolute;
+  left: calc(50% - 125px);
+  border: 1px solid blue;
+  background-color: blue;
+  font-size: 24px;
+  text-shadow: gray 2px 2px 2px;
+  cursor: pointer;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 2px solid;
+  outline-color: rgba(255, 255, 255, 0.6);
+  color: white
+}
+.button--scores {
+    top: 180px
+}
 .game{
     width: 1000px;
     height: 400px;
     box-align: center;
     position: absolute;
-    top: 20%;
+    top: 30%;
     left: 15%;
     border: 2px solid black;
     background-color: gray;
@@ -30,6 +62,7 @@
     /*background-color: yellow;*/
     position:relative;
     top: 300px;
+    
 }
 .animate{
     animation: jump 0.3s linear;
